# simview

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  .ycm_extra_conf.py  CMakeLists.txt  LICENSE  README.md  TODO.md  macros.cmake
.github/workflows/: ci.yml
experimental/: CMakeLists.txt  README.md  fst_dump.cc
src/: CMakeLists.txt  color.cc  color.h  demo.cc  design_tree_item.cc  design_tree_item.h  design_tree_panel.cc  design_tree_panel.h  fst_wave_data.cc  fst_wave_data.h  hierarchy.cc  hierarchy.h  main.cc  panel.cc  panel.h  radix.cc  radix.h  signal_tree_item.cc  signal_tree_item.h  simple_tokenizer.cc  simple_tokenizer.h  simple_tokenizer_test.cc  slang_utils.cc  slang_utils.h  source.cc  source.h  source_buffer.cc  source_buffer.h  source_buffer_test.cc  source_panel.cc  source_panel.h  temp.cc  text_input.cc  text_input.h  tree_data.cc  tree_data.h  tree_item.h  tree_panel.cc  tree_panel.h  uhdm_utils.cc  (+29 more)
